# APJaTelRust

./: Cargo.toml  diesel.toml
migrations/2024-06-17-113629_create_users/: up.sql
migrations/2024-06-17-113643_create_content/: up.sql
migrations/2024-06-17-113647_create_assets/: up.sql
src/: main.rs  models.rs  schema.rs
